package dev.kavrin.banking_ledger.outbox.persistence;

import dev.kavrin.banking_ledger.outbox.domain.model.OutboxStatus;
import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.UuidGenerator;

import java.time.OffsetDateTime;
import java.util.UUID;

@Entity
@Table(name = "outbox_events")
@Getter
@Setter
@NoArgsConstructor(access = AccessLevel.PROTECTED)
@AllArgsConstructor
@Builder
public class OutboxEventEntity {

    @Id
    @UuidGenerator
    @Column(name = "id", nullable = false)
    private UUID id;

    @Column(name = "aggregate_type", nullable = false, length = 100)
    private String aggregateType;

    @Column(name = "aggregate_id", nullable = false)
    private UUID aggregateId;

    @Column(name = "event_type", nullable = false, length = 100)
    private String eventType;

    @Column(name = "destination", length = 200)
    private String destination;

    @Column(name = "correlation_id", length = 100)
    private String correlationId;

    @Lob
    @Column(name = "event_payload", nullable = false, columnDefinition = "CLOB")
    private String eventPayload;

    @Enumerated(EnumType.STRING)
    @Column(name = "status", nullable = false, length = 30)
    private OutboxStatus status;

    @Column(name = "retry_count", nullable = false)
    private int retryCount;

    @Column(name = "next_retry_at")
    private OffsetDateTime nextRetryAt;

    @Column(name = "last_error_message", length = 1000)
    private String lastErrorMessage;

    @Column(name = "created_at", nullable = false)
    private OffsetDateTime createdAt;

    @Column(name = "published_at")
    private OffsetDateTime publishedAt;

    @Version
    @Column(name = "version", nullable = false)
    private long version;


    @PrePersist
    public void prePersist() {
        this.createdAt = OffsetDateTime.now();
    }


    public void markPublished(OffsetDateTime publishedAt) {
        this.status = OutboxStatus.PUBLISHED;
        this.publishedAt = publishedAt;
        this.nextRetryAt = null;
        this.lastErrorMessage = null;
    }

    public void markFailed(String errorMessage, OffsetDateTime nextRetryAt) {
        this.status = OutboxStatus.FAILED;
        this.retryCount = this.retryCount + 1;
        this.nextRetryAt = nextRetryAt;
        this.lastErrorMessage = errorMessage;
    }

    public void markDeadLettered(String errorMessage) {
        this.status = OutboxStatus.DEAD_LETTER;
        this.retryCount = this.retryCount + 1;
        this.nextRetryAt = null;
        this.lastErrorMessage = errorMessage;
    }

    public void markPendingForReplay(boolean resetRetryCount) {
        this.status = OutboxStatus.PENDING;
        if (resetRetryCount) {
            this.retryCount = 0;
        }
        this.nextRetryAt = null;
        this.lastErrorMessage = null;
        this.publishedAt = null;
    }
}
