erDiagram
    CUSTOMERS ||--o{ ACCOUNTS : owns
    ACCOUNTS ||--o{ POSTINGS : receives
    LEDGER_TRANSACTIONS ||--|| JOURNAL_ENTRIES : has
    JOURNAL_ENTRIES ||--o{ POSTINGS : contains
    LEDGER_TRANSACTIONS ||--o| TRANSFER_REQUESTS : posts
    TRANSFER_REQUESTS ||--o| REVERSALS : reversed_by
    LEDGER_TRANSACTIONS ||--o| REVERSALS : original_or_reversal
    LEDGER_TRANSACTIONS ||--o| ADJUSTMENT_REQUESTS : posts
    SETTLEMENT_BATCHES ||--o{ SETTLEMENT_ITEMS : imports
    SETTLEMENT_BATCHES ||--o{ RECONCILIATION_RESULTS : produces
    SETTLEMENT_ITEMS ||--o{ RECONCILIATION_RESULTS : compared_as
    LEDGER_TRANSACTIONS ||--o{ RECONCILIATION_RESULTS : matched_to
    LEDGER_TRANSACTIONS ||--o{ OUTBOX_EVENTS : emits
    LEDGER_TRANSACTIONS ||--o{ AUDIT_EVENTS : audited_by
    IDEMPOTENCY_RECORDS }o--o| TRANSFER_REQUESTS : protects
